--- a/css/responsive.css
+++ b/css/responsive.css
@@ -163,7 +163,7 @@
 @media (min-width: 768px) and (max-width: 991px) {
     .header_section {
         background-size: cover;
-        background: #252f2d!important;
+        background-image: url(../images/banner2.png);
     }
     .logo {
         width: auto;
@@ -242,7 +242,7 @@
 @media (min-width: 576px) and (max-width: 767px) {
     .header_section {
         background-size: cover;
-        background: #252f2d!important;
+        background-image: url(../images/banner2.png);
     }
     .logo {
         width: auto;
@@ -339,7 +339,7 @@
 @media (max-width: 575px) {
     .header_section {
         background-size: cover;
-        background: #252f2d!important;
+        background-image: url(../images/banner2.png);
     }
     .logo {
         width: auto;
